--- a/front/src/locales/ru.json
+++ b/front/src/locales/ru.json
@@ -272,9 +272,7 @@
           "approvalRequired": "Если вы недавно зарегистрировались, может понадобиться подождать, пока ваша учётная запись будет одобрена, либо придёт подтверждение по почте.",
           "invalidCredentials": "Пожалуйста перепроверьте, что ваше имя пользователя и пароль верны и что вы подтвердили ваш адрес почты."
         },
-        "button": {
-          "login": "Войти"
-        },
+        "button": {},
         "label": {
           "password": "Пароль",
           "username": "Имя пользователя или почта"
@@ -323,7 +321,6 @@
           "library": "Библиотека, куда будут импортированы файлы."
         },
         "button": {
-          "save": "Сохранить",
           "scan": "Сканировать"
         }
       }
@@ -417,9 +414,7 @@
           }
         },
         "Widget": {
-          "button": {
-            "more": "Показать больше"
-          }
+          "button": {}
         }
       },
       "ChannelCard": {
@@ -441,9 +436,7 @@
           }
         },
         "Widget": {
-          "button": {
-            "more": "Показать больше"
-          }
+          "button": {}
         }
       },
       "Player": {
@@ -548,9 +541,7 @@
           "empty": {
             "noResults": "Ничего не найдено"
           },
-          "button": {
-            "more": "Показать больше"
-          }
+          "button": {}
         },
         "MobileRow": {
           "button": {
@@ -651,9 +642,7 @@
         }
       },
       "EmbedWizard": {
-        "button": {
-          "copy": "Копировать"
-        },
+        "button": {},
         "help": {
           "embed": "Скопируйте и вставьте этот код в HTML Вашего сайта",
           "width": "Оставьте пустым для динамического виджета",
@@ -675,17 +664,13 @@
         }
       },
       "ChannelSeries": {
-        "button": {
-          "showMore": "Показать больше"
-        },
+        "button": {},
         "help": {
           "subscribe": "Вам может потребоваться подписаться на этот канал, чтобы увидеть его содержимое."
         }
       },
       "ChannelsWidget": {
-        "button": {
-          "showMore": "Показать больше"
-        }
+        "button": {}
       },
       "ChannelEntries": {
         "help": {
@@ -710,9 +695,6 @@
         },
         "title": "Исполнитель",
         "button": {
-          "cancel": "Отмена",
-          "edit": "Редактировать",
-          "embed": "Внедрить",
           "more": "Ещё…",
           "play": "Проиграть все альбомы"
         },
@@ -750,8 +732,7 @@
             }
           },
           "button": {
-            "filter": "Добавить фильтр",
-            "save": "Сохранить"
+            "filter": "Добавить фильтр"
           },
           "label": {
             "filter": "Добавить фильтры, чтобы настроить своё радио",
@@ -803,7 +784,6 @@
           }
         },
         "button": {
-          "cancel": "Отмена",
           "retry": "Повторить неудачные закачки"
         },
         "label": {
@@ -840,8 +820,6 @@
           "summary": "Краткая информация о Ваших правках."
         },
         "button": {
-          "cancel": "Отмена",
-          "clear": "Очистить",
           "reset": "Сброс на начальное значение",
           "showUnreviewed": "Ограничить неодобренные правки",
           "showAll": "Показать все правки",
@@ -895,14 +873,11 @@
           "search": "Поиск",
           "tags": "Теги"
         },
-        "button": {
-          "search": "Поиск"
-        }
+        "button": {}
       },
       "Artists": {
         "button": {
-          "upload": "Добавить музыку",
-          "search": "Поиск"
+          "upload": "Добавить музыку"
         },
         "label": {
           "search": "Имя исполнителя",
@@ -1010,9 +985,7 @@
             "message": "Метаданные файла неправильные или некоторые обязательные поля отсутствуют."
           }
         },
-        "button": {
-          "close": "Закрыть"
-        },
+        "button": {},
         "table": {
           "error": {
             "debug": "Диагностика",
@@ -1039,7 +1012,6 @@
       "EditCard": {
         "button": {
           "approve": "Одобрить",
-          "delete": "Удалить",
           "reject": "Отклонить"
         },
         "status": {
@@ -1086,9 +1058,7 @@
           "browse": "Просмотр подкастов"
         },
         "button": {
-          "cancel": "Отмена",
           "channel": "Создать канал",
-          "search": "Поиск",
           "subscribe": "Подписаться",
           "feed": "Подписаться на канал"
         },
@@ -1146,10 +1116,6 @@
       },
       "AlbumDropdown": {
         "button": {
-          "cancel": "Отмена",
-          "delete": "Удалить…",
-          "edit": "Редактировать",
-          "embed": "Внедрить",
           "more": "Ещё…"
         },
         "modal": {
@@ -1173,11 +1139,7 @@
       },
       "TrackBase": {
         "button": {
-          "cancel": "Отмена",
-          "delete": "Удалить…",
           "download": "Скачать",
-          "edit": "Редактировать",
-          "embed": "Внедрить",
           "more": "Ещё…",
           "play": "Проиграть"
         },
@@ -1311,8 +1273,6 @@
           "quota": "Свободное место:"
         },
         "button": {
-          "cancel": "Отмена",
-          "close": "Закрыть",
           "finishLater": "Закончить позже",
           "next": "Следующий шаг",
           "previous": "Предыдущий шаг",
@@ -1384,10 +1344,7 @@
         }
       },
       "AlbumModal": {
-        "button": {
-          "cancel": "Отмена",
-          "create": "Создать"
-        },
+        "button": {},
         "header": {
           "newAlbum": "Новый альбом",
           "newSeries": "Новая серия"
@@ -1557,18 +1514,13 @@
         }
       },
       "DangerousButton": {
-        "button": {
-          "cancel": "Отмена",
-          "confirm": "Подтвердить"
-        },
+        "button": {},
         "header": {
           "confirm": "Вы хотите подтвердить это действие?"
         }
       },
       "RenderedDescription": {
         "button": {
-          "cancel": "Отмена",
-          "edit": "Редактировать",
           "less": "Показать меньше",
           "more": "Показать больше",
           "update": "Описание обновления"
@@ -1581,9 +1533,7 @@
         }
       },
       "InlineSearchBar": {
-        "button": {
-          "clear": "Очистить"
-        },
+        "button": {},
         "label": {
           "search": "Поиск"
         },
@@ -1598,9 +1548,7 @@
         }
       },
       "CopyInput": {
-        "button": {
-          "copy": "Копировать"
-        },
+        "button": {},
         "message": {
           "success": "Текст скопирован в буфер обмена!"
         }
@@ -1636,9 +1584,7 @@
         "header": {
           "noResults": "Ничего не найдено."
         },
-        "button": {
-          "refresh": "Обновить"
-        }
+        "button": {}
       },
       "AttachmentInput": {
         "help": {
@@ -1677,9 +1623,7 @@
         "button": {
           "addDuplicate": "Всё равно добавить",
           "addToPlaylist": "Добавить в этот список воспроизведения",
-          "addTrack": "Добавить трек",
-          "cancel": "Отмена",
-          "edit": "Редактировать"
+          "addTrack": "Добавить трек"
         },
         "header": {
           "addToPlaylist": "Добавить в список воспроизведения",
@@ -1768,8 +1712,7 @@
       },
       "Widget": {
         "button": {
-          "create": "Создать список воспроизведения",
-          "more": "Показать больше"
+          "create": "Создать список воспроизведения"
         },
         "placeholder": {
           "noPlaylists": "Списки воспроизведения пока не были созданы"
@@ -2148,7 +2091,6 @@
             "reportedObject": "Предмет жалобы"
           },
           "button": {
-            "confirmDelete": "Удалить",
             "delete": "Удалить объект по жалобе",
             "resolve": "Разрешить",
             "unresolve": "Открыть заново"
@@ -2228,10 +2170,7 @@
             "isActive": "Используйте эту настройку для временного включения/отключения политики без полного её удаления."
           },
           "button": {
-            "cancel": "Отмена",
             "create": "Создать",
-            "delete": "Удалить",
-            "confirm": "Удалить правило модерации",
             "update": "Дата загрузки"
           },
           "modal": {
@@ -2356,9 +2295,7 @@
             "reason": "Причина",
             "rejectMedia": "Отклонить"
           },
-          "button": {
-            "edit": "Редактировать"
-          },
+          "button": {},
           "status": {
             "enabled": "Включено",
             "paused": "Пауза"
@@ -2369,7 +2306,6 @@
         },
         "InstancePolicyModal": {
           "button": {
-            "close": "Закрыть",
             "show": "Правила модерации…"
           },
           "modal": {
@@ -2382,9 +2318,7 @@
           }
         },
         "NotesThread": {
-          "button": {
-            "delete": "Удалить"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Удалить это примечание?",
@@ -2518,7 +2452,6 @@
         },
         "InvitationForm": {
           "button": {
-            "clear": "Очистить",
             "new": "Получить приглашение"
           },
           "table": {
@@ -2584,9 +2517,7 @@
           "image": "Текущее изображение",
           "error": "Ошибка во время сохранения настроек"
         },
-        "button": {
-          "save": "Сохранить"
-        },
+        "button": {},
         "message": {
           "success": "Настройки успешно обновлены."
         }
@@ -2608,7 +2539,6 @@
           "submissionFailure": "Ошибка при отправке жалобы"
         },
         "button": {
-          "cancel": "Отмена",
           "submit": "Отправить жалобу"
         },
         "label": {
@@ -2628,7 +2558,6 @@
       },
       "FilterModal": {
         "button": {
-          "cancel": "Отмена",
           "hide": "Скрыть содержимое"
         },
         "message": {
@@ -2678,7 +2607,6 @@
           }
         },
         "button": {
-          "close": "Закрыть",
           "reload": "Закрыть и обновить страницу"
         },
         "header": {
@@ -2698,9 +2626,7 @@
         "empty": {
           "noMatch": "Нет подходящей библиотеки."
         },
-        "button": {
-          "showMore": "Показать больше"
-        }
+        "button": {}
       }
     },
     "ShortcutsModal": {
@@ -2730,18 +2656,13 @@
           "unfocus": "Выйти из панели поиска"
         }
       },
-      "button": {
-        "close": "Закрыть"
-      },
+      "button": {},
       "header": {
         "modal": "Горячие клавиши"
       }
     },
     "SetInstanceModal": {
-      "button": {
-        "cancel": "Отмена",
-        "submit": "Отправить"
-      },
+      "button": {},
       "header": {
         "chooseInstance": "Выберите свой узел",
         "failure": "Невозможно соединиться с указанным URL",
@@ -2761,8 +2682,6 @@
     },
     "Queue": {
       "button": {
-        "clear": "Очистить",
-        "close": "Закрыть",
         "stopRadio": "Остановить радио"
       },
       "label": {
@@ -2793,9 +2712,7 @@
     },
     "forms": {
       "PasswordInput": {
-        "button": {
-          "copy": "Копировать"
-        },
+        "button": {},
         "title": "Показать/скрыть пароль",
         "message": {
           "copy": "Текст скопирован в буфер обмена!"
@@ -2804,9 +2721,7 @@
     },
     "radios": {
       "Card": {
-        "button": {
-          "edit": "Редактировать"
-        }
+        "button": {}
       },
       "Button": {
         "startRadio": "Запустить радио",
@@ -2819,8 +2734,7 @@
       },
       "button": {
         "fediverse": "Федивёрс",
-        "rss": "RSS",
-        "search": "Поиск"
+        "rss": "RSS"
       },
       "label": {
         "fediverse": {
@@ -2893,11 +2807,6 @@
           "podcastChannel": "Канал подкастов"
         },
         "button": {
-          "cancel": "Отмена",
-          "confirm": "Удалить",
-          "delete": "Удалить…",
-          "edit": "Редактировать…",
-          "embed": "Внедрить",
           "play": "Проиграть",
           "updateChannel": "Обновить канал",
           "upload": "Загрузить"
@@ -2960,7 +2869,6 @@
           "addNew": "Добавить новый"
         },
         "button": {
-          "cancel": "Отмена",
           "subscribe": "Подписаться"
         },
         "placeholder": {
@@ -3101,8 +3009,6 @@
         "Form": {
           "button": {
             "create": "Создать библиотеку",
-            "delete": "Удалить",
-            "confirm": "Удалить библиотеку",
             "update": "Обновить библиотеку"
           },
           "modal": {
@@ -3200,9 +3106,7 @@
           "loading": {
             "remoteLibraries": "Загружаем удалённые библиотеки…"
           },
-          "button": {
-            "refresh": "Обновить"
-          },
+          "button": {},
           "description": {
             "remoteLibraries": "Удалёнными библиотеками владеют другие пользователи в сети. Вы можете получить к ним доступ если они публичны или Вам предоставлен доступ."
           }
@@ -3255,7 +3159,6 @@
           "domain": "Посмотреть на { domain }"
         },
         "button": {
-          "edit": "Редактировать",
           "upload": "Загрузить"
         },
         "title": "Библиотека",
@@ -3375,7 +3278,6 @@
           }
         },
         "button": {
-          "cancel": "Отмена",
           "createChannel": "Создать канал",
           "next": "Следующий шаг",
           "previous": "Предыдущий шаг"
@@ -3748,7 +3650,6 @@
             "uploadData": "Дата загрузки"
           },
           "button": {
-            "delete": "Удалить",
             "download": "Скачать"
           },
           "modal": {
@@ -3794,9 +3695,7 @@
               "followers": "Подписчики"
             }
           },
-          "button": {
-            "delete": "Удалить"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Удалить эту библиотеку?",
@@ -3846,8 +3745,6 @@
             }
           },
           "button": {
-            "delete": "Удалить",
-            "edit": "Редактировать",
             "remoteRefresh": "Обновить с удалённого сервера"
           },
           "modal": {
@@ -3900,8 +3797,6 @@
             }
           },
           "button": {
-            "delete": "Удалить",
-            "edit": "Редактировать",
             "remoteRefresh": "Обновить с удалённого сервера"
           },
           "modal": {
@@ -3929,9 +3824,7 @@
             "tracks": "Треки",
             "django": "Посмотреть в админке Django"
           },
-          "button": {
-            "delete": "Удалить"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Удалить этот тег?",
@@ -3990,8 +3883,6 @@
             }
           },
           "button": {
-            "delete": "Удалить",
-            "edit": "Редактировать",
             "remoteRefresh": "Обновить с удалённого сервера"
           },
           "modal": {
@@ -4062,7 +3953,6 @@
           "channelData": "Данные канала"
         },
         "button": {
-          "delete": "Удалить",
           "openRemote": "Открыть удалённый профиль",
           "refresh": "Обновить с удалённого сервера"
         },
@@ -4165,8 +4055,7 @@
         },
         "button": {
           "create": "Создать список воспроизведения",
-          "manage": "Управлять Вашими списками воспроизведения",
-          "search": "Поиск"
+          "manage": "Управлять Вашими списками воспроизведения"
         },
         "placeholder": {
           "search": "Введите название списка воспроизведения…"
@@ -4183,11 +4072,7 @@
       },
       "Detail": {
         "button": {
-          "cancel": "Отмена",
-          "delete": "Удалить",
           "confirm": "Удалить список воспроизведения",
-          "edit": "Редактировать",
-          "embed": "Внедрить",
           "playAll": "Проиграть всё",
           "stopEdit": "Прекратить редактирование"
         },
@@ -4216,10 +4101,7 @@
     },
     "radios": {
       "Detail": {
-        "button": {
-          "confirm": "Удалить радио",
-          "edit": "Редактировать…"
-        },
+        "button": {},
         "modal": {
           "delete": {
             "header": "Вы хотите удалить радио \"{ radio }\"?",
