--- a/front/src/locales/eo.json
+++ b/front/src/locales/eo.json
@@ -188,9 +188,7 @@
         "placeholder": {
           "username": "Tajpu vian uzantnomon aŭ retadreson"
         },
-        "button": {
-          "login": "Ensaluti"
-        },
+        "button": {},
         "label": {
           "password": "Pasvorto",
           "username": "Uzantnomo aŭ retpoŝtadreso"
@@ -248,7 +246,6 @@
           "failure": "Eraro kiam konservi preferojn"
         },
         "button": {
-          "save": "Konservi",
           "scan": "Skana"
         }
       }
@@ -311,9 +308,7 @@
           }
         },
         "Widget": {
-          "button": {
-            "more": "Afiŝi unu alian albumon"
-          }
+          "button": {}
         }
       },
       "ChannelCard": {
@@ -335,9 +330,7 @@
           }
         },
         "Widget": {
-          "button": {
-            "more": "Afiŝi unu alian albumon"
-          }
+          "button": {}
         }
       },
       "Player": {
@@ -434,9 +427,7 @@
           }
         },
         "Widget": {
-          "button": {
-            "more": "Afiŝi unu alian albumon"
-          }
+          "button": {}
         },
         "MobileRow": {
           "button": {
@@ -499,9 +490,7 @@
         }
       },
       "EmbedWizard": {
-        "button": {
-          "copy": "Kopii"
-        },
+        "button": {},
         "help": {
           "embed": "Kopi kaj alglui tiun kodon en via retejo",
           "width": "Lasu malplena por adaptiĝema fenestraĵo"
@@ -525,17 +514,13 @@
         }
       },
       "ChannelSeries": {
-        "button": {
-          "showMore": "Afiŝi unu alian albumon"
-        },
+        "button": {},
         "help": {
           "subscribe": "Se vi malsekvantus tiun muzikejon, vi perdus ĝian muzikon."
         }
       },
       "ChannelsWidget": {
-        "button": {
-          "showMore": "Afiŝi unu alian albumon"
-        }
+        "button": {}
       },
       "ChannelEntries": {
         "help": {
@@ -560,9 +545,6 @@
         },
         "title": "Artisto",
         "button": {
-          "cancel": "Nuligi",
-          "edit": "Redakti",
-          "embed": "Enkorpigi",
           "play": "Ludi ĉiuj albumoj"
         },
         "modal": {
@@ -598,8 +580,7 @@
             }
           },
           "button": {
-            "filter": "Aldoni filtrilon",
-            "save": "Konservi"
+            "filter": "Aldoni filtrilon"
           },
           "label": {
             "filter": "Aldonu filtrilojn por tajlori vian radion",
@@ -650,7 +631,6 @@
           }
         },
         "button": {
-          "cancel": "Nuligi",
           "retry": "Ĝisdatigas muzikejon"
         },
         "label": {
@@ -682,10 +662,7 @@
         "placeholder": {
           "summary": "Mallonga resumo priskribante viaj ŝanĝoj."
         },
-        "button": {
-          "cancel": "Nuligi",
-          "clear": "Purigi"
-        },
+        "button": {},
         "header": {
           "failure": "Eraro kiam konservi preferojn",
           "recentEdits": "Novaj aldonoj"
@@ -717,14 +694,11 @@
         "label": {
           "search": "Serĉi"
         },
-        "button": {
-          "search": "Serĉi"
-        }
+        "button": {}
       },
       "Artists": {
         "button": {
-          "upload": "Serĉi muzikon",
-          "search": "Serĉi"
+          "upload": "Serĉi muzikon"
         },
         "label": {
           "search": "Nomo de artisto"
@@ -814,7 +788,6 @@
       "EditCard": {
         "button": {
           "approve": "Akcepti",
-          "delete": "Forigi",
           "reject": "Malakcepti"
         },
         "status": {
@@ -850,9 +823,7 @@
           "browse": "Folii artistojn"
         },
         "button": {
-          "cancel": "Nuligi",
           "channel": "Krei novan muzikejon",
-          "search": "Serĉi",
           "feed": "Uzi Funkwhale"
         },
         "empty": {
@@ -903,12 +874,7 @@
         }
       },
       "AlbumDropdown": {
-        "button": {
-          "cancel": "Nuligi",
-          "delete": "Forigi",
-          "edit": "Redakti",
-          "embed": "Enkorpigi"
-        },
+        "button": {},
         "modal": {
           "delete": {
             "header": "Forigi tiun muzikejon?",
@@ -929,11 +895,7 @@
       },
       "TrackBase": {
         "button": {
-          "cancel": "Nuligi",
-          "delete": "Forigi",
           "download": "Elŝuti",
-          "edit": "Redakti",
-          "embed": "Enkorpigi",
           "play": "Ludi"
         },
         "modal": {
@@ -956,9 +918,7 @@
         "title": "Kanto"
       },
       "ImportStatusModal": {
-        "button": {
-          "close": "Fermi"
-        },
+        "button": {},
         "table": {
           "error": {
             "debug": "Kantodatumo",
@@ -1064,8 +1024,6 @@
           "files": "Unu stelumo | { n } stelumoj"
         },
         "button": {
-          "cancel": "Nuligi",
-          "close": "Fermi",
           "finishLater": "Finanto",
           "next": "Baldaŭa kanto",
           "previous": "Antaŭa kanto",
@@ -1114,10 +1072,7 @@
         }
       },
       "AlbumModal": {
-        "button": {
-          "cancel": "Nuligi",
-          "create": "Krei"
-        },
+        "button": {},
         "header": {
           "newAlbum": "Unu albumo",
           "newSeries": "Unu albumo"
@@ -1263,18 +1218,13 @@
         }
       },
       "DangerousButton": {
-        "button": {
-          "cancel": "Nuligi",
-          "confirm": "Konfirmi"
-        },
+        "button": {},
         "header": {
           "confirm": "Ĉu vi volas konfirmi tiun akton?"
         }
       },
       "RenderedDescription": {
         "button": {
-          "cancel": "Nuligi",
-          "edit": "Redakti",
           "more": "Afiŝi unu alian albumon",
           "update": "Mia mojosa priskribo"
         },
@@ -1283,9 +1233,7 @@
         }
       },
       "InlineSearchBar": {
-        "button": {
-          "clear": "Purigi"
-        },
+        "button": {},
         "label": {
           "search": "Serĉi"
         },
@@ -1299,9 +1247,7 @@
         }
       },
       "CopyInput": {
-        "button": {
-          "copy": "Kopii"
-        },
+        "button": {},
         "message": {
           "success": "Kopiis teksto al tondujo!"
         }
@@ -1321,9 +1267,7 @@
         }
       },
       "EmptyState": {
-        "button": {
-          "refresh": "Ĝisdatigi"
-        }
+        "button": {}
       },
       "AttachmentInput": {
         "button": {
@@ -1361,9 +1305,7 @@
         },
         "button": {
           "addToPlaylist": "Aldoni al ĉi tiu ludlisto",
-          "addTrack": "Aldoni kanton",
-          "cancel": "Nuligi",
-          "edit": "Redakti"
+          "addTrack": "Aldoni kanton"
         },
         "table": {
           "edit": {
@@ -1441,8 +1383,7 @@
       },
       "Widget": {
         "button": {
-          "create": "Krei ludliston",
-          "more": "Afiŝi unu alian albumon"
+          "create": "Krei ludliston"
         },
         "placeholder": {
           "noPlaylists": "Ludlisto kreiintas"
@@ -1788,9 +1729,7 @@
           "header": {
             "actions": "Agoj"
           },
-          "button": {
-            "confirmDelete": "Forigi"
-          },
+          "button": {},
           "notApplicable": "ND",
           "link": {
             "moderation": "Ĝisdati moderecan regulon"
@@ -1845,10 +1784,7 @@
             "isActive": "Uzu tiun agordon por tempe aktivigi/malaktivigi la regularon sen tute forigi ĝin."
           },
           "button": {
-            "cancel": "Nuligi",
             "create": "Krei",
-            "delete": "Forigi",
-            "confirm": "Forigi moderecan regulon",
             "update": "Ĝisdati"
           },
           "modal": {
@@ -1966,9 +1902,7 @@
             "reason": "Kialo",
             "rejectMedia": "Malakcepti aŭdovidaĵon"
           },
-          "button": {
-            "edit": "Redakti"
-          },
+          "button": {},
           "status": {
             "enabled": "Aktiva",
             "paused": "Paŭza"
@@ -1979,7 +1913,6 @@
         },
         "InstancePolicyModal": {
           "button": {
-            "close": "Fermi",
             "show": "Ĝisdati moderecan regulon"
           },
           "modal": {
@@ -1992,9 +1925,7 @@
           }
         },
         "NotesThread": {
-          "button": {
-            "delete": "Forigi"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Forigi tiun muzikejon?",
@@ -2126,7 +2057,6 @@
         },
         "InvitationForm": {
           "button": {
-            "clear": "Purigi",
             "new": "Akiri novan inviton"
           },
           "table": {
@@ -2175,9 +2105,7 @@
           "image": "Aktuala uzo",
           "error": "Eraro kiam konservi preferojn"
         },
-        "button": {
-          "save": "Konservi"
-        },
+        "button": {},
         "message": {
           "success": "Agordoj sukcese ĝisdatigas."
         }
@@ -2191,7 +2119,6 @@
       },
       "FilterModal": {
         "button": {
-          "cancel": "Nuligi",
           "hide": "Aldoni muzikon"
         },
         "header": {
@@ -2206,7 +2133,6 @@
       },
       "ReportModal": {
         "button": {
-          "cancel": "Nuligi",
           "submit": "Submeti"
         },
         "header": {
@@ -2234,9 +2160,7 @@
             }
           }
         },
-        "button": {
-          "close": "Fermi"
-        },
+        "button": {},
         "header": {
           "saveFailure": "Eraro kiam konservi preferojn",
           "failure": "Ĝisdatigi",
@@ -2250,9 +2174,7 @@
         "empty": {
           "noMatch": "Neniu muzikejo korespondas."
         },
-        "button": {
-          "showMore": "Afiŝi unu alian albumon"
-        }
+        "button": {}
       }
     },
     "ShortcutsModal": {
@@ -2274,18 +2196,13 @@
           "show": "Afiŝi disponeblajn fulmoklavojn"
         }
       },
-      "button": {
-        "close": "Fermi"
-      },
+      "button": {},
       "header": {
         "modal": "Fulmoklavo"
       }
     },
     "SetInstanceModal": {
-      "button": {
-        "cancel": "Nuligi",
-        "submit": "Submeti"
-      },
+      "button": {},
       "header": {
         "chooseInstance": "Elekti vian instanco",
         "suggestions": "Sugestaj elektoj"
@@ -2296,8 +2213,6 @@
     },
     "Queue": {
       "button": {
-        "clear": "Purigi",
-        "close": "Fermi",
         "stopRadio": "Halti radion"
       },
       "label": {
@@ -2326,9 +2241,7 @@
     },
     "forms": {
       "PasswordInput": {
-        "button": {
-          "copy": "Kopii"
-        },
+        "button": {},
         "title": "Afiŝi/kaŝi pasvorton",
         "message": {
           "copy": "Kopiis teksto al tondujo!"
@@ -2337,9 +2250,7 @@
     },
     "radios": {
       "Card": {
-        "button": {
-          "edit": "Redakti"
-        }
+        "button": {}
       },
       "Button": {
         "startRadio": "Ludi kanton",
@@ -2358,9 +2269,7 @@
           "title": "Serĉi je Vikipedio"
         }
       },
-      "button": {
-        "search": "Serĉi"
-      },
+      "button": {},
       "error": {
         "fetchFailed": "Ne eblas krei vian konton."
       }
@@ -2405,11 +2314,6 @@
           "artistChannel": "Nomo de artisto"
         },
         "button": {
-          "cancel": "Nuligi",
-          "confirm": "Forigi",
-          "delete": "Forigi",
-          "edit": "Redakti",
-          "embed": "Enkorpigi",
           "play": "Ludi",
           "updateChannel": "Ĝisdati ludliston",
           "upload": "Elŝuti"
@@ -2455,9 +2359,7 @@
         "link": {
           "addNew": "Aldoni enhavon"
         },
-        "button": {
-          "cancel": "Nuligi"
-        },
+        "button": {},
         "placeholder": {
           "search": "Filtri nomon"
         },
@@ -2591,8 +2493,6 @@
         "Form": {
           "button": {
             "create": "Krei muzikejon",
-            "delete": "Forigi",
-            "confirm": "Forigi muzikejon",
             "update": "Ĝisdati muzikejon"
           },
           "modal": {
@@ -2690,9 +2590,7 @@
           "loading": {
             "remoteLibraries": "Ŝargas mallokajn muzikejojn…"
           },
-          "button": {
-            "refresh": "Ĝisdatigi"
-          },
+          "button": {},
           "description": {
             "remoteLibraries": "Mallokaj muzikejoj apartenas al aliaj uzantoj el la reto. Vi povas atingi ilin se ili estas publika aŭ vi estas akceptinta."
           }
@@ -2738,7 +2636,6 @@
           "domain": "Aligis je {date}"
         },
         "button": {
-          "edit": "Redakti",
           "upload": "Elŝuti"
         },
         "title": "Muzikejo",
@@ -2849,7 +2746,6 @@
           }
         },
         "button": {
-          "cancel": "Nuligi",
           "createChannel": "Krei novan muzikejon",
           "next": "Baldaŭa kanto",
           "previous": "Antaŭa kanto"
@@ -3195,7 +3091,6 @@
             "uploadData": "Elŝutdato"
           },
           "button": {
-            "delete": "Forigi",
             "download": "Elŝuti"
           },
           "modal": {
@@ -3238,9 +3133,7 @@
               "followers": "Sekvantoj"
             }
           },
-          "button": {
-            "delete": "Forigi"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Forigi tiun muzikejon?"
@@ -3282,10 +3175,7 @@
               "playlists": "Ludlistoj"
             }
           },
-          "button": {
-            "delete": "Forigi",
-            "edit": "Redakti"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Forigi tiun muzikejon?"
@@ -3327,10 +3217,7 @@
               "playlists": "Ludlistoj"
             }
           },
-          "button": {
-            "delete": "Forigi",
-            "edit": "Redakti"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Forigi tiun muzikejon?"
@@ -3352,9 +3239,7 @@
             "localProfile": "Malfermi profilon",
             "tracks": "Kantoj"
           },
-          "button": {
-            "delete": "Forigi"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Forigi tiun muzikejon?",
@@ -3407,10 +3292,7 @@
               "playlists": "Ludlistoj"
             }
           },
-          "button": {
-            "delete": "Forigi",
-            "edit": "Redakti"
-          },
+          "button": {},
           "modal": {
             "delete": {
               "header": "Forigi tiun muzikejon?"
@@ -3469,7 +3351,6 @@
           "channelData": "Instanca datumo"
         },
         "button": {
-          "delete": "Forigi",
           "openRemote": "Malfermi profilon"
         },
         "modal": {
@@ -3559,8 +3440,7 @@
         },
         "button": {
           "create": "Krei ludliston",
-          "manage": "Manipuli viajn ludlistojn",
-          "search": "Serĉi"
+          "manage": "Manipuli viajn ludlistojn"
         },
         "placeholder": {
           "search": "Tajpu nomon de ludlisto…"
@@ -3577,11 +3457,7 @@
       },
       "Detail": {
         "button": {
-          "cancel": "Nuligi",
-          "delete": "Forigi",
           "confirm": "Forigi ludliston",
-          "edit": "Redakti",
-          "embed": "Enkorpigi",
           "playAll": "Ludi ĉiu",
           "stopEdit": "Halti radion"
         },
@@ -3610,10 +3486,7 @@
     },
     "radios": {
       "Detail": {
-        "button": {
-          "confirm": "Forigi radion",
-          "edit": "Redakti"
-        },
+        "button": {},
         "modal": {
           "delete": {
             "header": "Ĉu vi volas forigi la \"{radio}\" radion?",
